--- a/curso.git.html
+++ b/curso.git.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Proyecto empresarial</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis necessitatibus, ipsa quis vitae odit assumenda, consequatur rerum inventore modi aut temporibus voluptate fuga quo, obcaecati nihil enim sint saepe voluptatibus!</p>
-    
+    <p>Nuevo parrafo</p>
 </body>
 </html>
